# NovusNet

./: CMakeLists.txt  Documentation.md  README.md  gen.sh
include/: conn.hpp  nn.hpp
src/: client.cpp  conn.cpp  main.cpp  nn.cpp  server.cpp
